--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer type="text/javascript" src="script.js"></script>
+	<link rel="styleSheet" type="text/css" href='style.css'>
 	<title>TimeOut</title>
 </head>
 <body>
-	
+	<div id="container"> 
+
+	</div>
+
 </body>
 </html>
